[tool.poetry]
name = "social-bot"
version = "1.0.2"
description = "A simple python social media video downloader bot."
authors = ["Mohammad Alamin anbuinfosec@gmail.com"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
psutil = "^5.9.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
telebot = "^0.0.5"
utils = "^1.0.1"
flask = "^3.0.0"
app = "^0.0.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
